[package]
name = "primp-hyper-rustls"
version = "0.27.7"
edition = "2021"
rust-version = "1.84"
license = "Apache-2.0 OR ISC OR MIT"
description = "Fork of hyper-rustls"

# Aliases
[lib]
name = "hyper_rustls"
path = "src/lib.rs"

[features]
default = ["native-tokio", "http1", "tls12", "logging", "aws-lc-rs"]
aws-lc-rs = ["rustls/aws_lc_rs"]
fips = ["aws-lc-rs", "rustls/fips"]
http1 = ["hyper-util/http1"]
http2 = ["hyper-util/http2"]
logging = ["log", "tokio-rustls/logging", "rustls/logging"]
native-tokio = ["rustls-native-certs"]
ring = ["rustls/ring"]
tls12 = ["tokio-rustls/tls12", "rustls/tls12"]
webpki-tokio = ["webpki-roots"]

[dependencies]
http = "1"
hyper = { version = "1.8", path = "../primp-hyper", package = "primp-hyper", default-features = false }
hyper-util = { version = "0.1", path = "../primp-hyper-util", package = "primp-hyper-util", default-features = false, features = ["client-legacy", "tokio"] }
log = { version = "0.4.4", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { version = "0.8", optional = true }
rustls-platform-verifier = { version = "0.6", optional = true }
rustls = { version = "0.23", path = "../primp-rustls/rustls", package = "primp-rustls", default-features = false }
tokio = "1.0"
tokio-rustls = { version = "0.26", path = "../primp-tokio-rustls", package = "primp-tokio-rustls", default-features = false }
tower-service = "0.3"
webpki-roots = { version = "1", optional = true }

[dev-dependencies]
cfg-if = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", path = "../primp-hyper-util", package = "primp-hyper-util", default-features = false, features = ["server-auto"] }
rustls = { version = "0.23", path = "../primp-rustls/rustls", package = "primp-rustls", default-features = false, features = ["tls12"] }
rustls-pemfile = "2"
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }

[package.metadata.docs.rs]
no-default-features = true
features = [
    "http1",
    "http2",
    "logging",
    "native-tokio",
    "ring",
    "rustls-platform-verifier",
    "tls12",
    "webpki-tokio",
]
rustdoc-args = ["--cfg", "docsrs"]
