[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "primp"
description = "HTTP client that can impersonate web browsers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
keywords = ["python", "request", "impersonate"]
authors = [
  {name = "deedy5"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = []

[project.urls]
repository = "https://github.com/deedy5/primp"

[project.optional-dependencies]
dev = [
    "certifi",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.25.3",
    "typing_extensions; python_version <= '3.11'",  # for Unpack[TypedDict]
    "mypy>=1.14.1",
    "ruff>=0.9.2"
]

[tool.maturin]
features = []

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "internet: marks tests that require external internet connectivity",
    "slow: marks tests that are slow to run",
]