[package]
name = "primp-tokio-rustls"
version = "0.26.4"
license = "MIT OR Apache-2.0"
description = "Fork of tokio-rustls"
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2021"
rust-version = "1.84"

# Aliases
[lib]
name = "tokio_rustls"
path = "src/lib.rs"

[dependencies]
rustls = { version = "0.23", path = "../primp-rustls/rustls", package = "primp-rustls", default-features = false, features = ["std"] }
tokio = "1.0"

[features]
default = ["logging", "tls12", "aws_lc_rs"]
aws_lc_rs = ["rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]
brotli = ["rustls/brotli"]
early-data = []
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]
zlib = ["rustls/zlib"]

[dev-dependencies]
argh = "0.1.1"
futures-util = "0.3.1"
lazy_static = "1.1"
rcgen = { version = "0.14", features = ["pem"] }
tokio = { version = "1.0", features = ["full"] }
webpki-roots = "1"
