[package]
name = "rustls-provider-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "Apache-2.0 OR ISC OR MIT"
description = "Integration tests for Rustls cryptography providers"
publish = false

[dependencies]
hex = "0.4"
rustls = { version = "0.23.37", features = ["aws_lc_rs", "logging"], path = "../rustls", package = "primp-rustls" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
