[package]
name = "h2-support"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false
edition = "2021"
rust-version = "1.84"

[dependencies]
h2 = { path = "../..", package = "primp-h2", features = ["stream", "unstable"] }

atty = "0.2"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-tree = "0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
http = "1"
tokio = { version = "1", features = ["time"] }
tokio-test = "0.4"
