[package]
name = "hyper"
version = "1.8.1"
description = "Fork of the original hyper HTTP library."
readme = "README.md"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
edition = "2021"
rust-version = "1.63"
build = false
include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
keywords = [
    "http",
    "hyper",
    "hyperium",
]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[package.metadata.docs.rs]
features = [
    "ffi",
    "full",
    "tracing",
]
rustdoc-args = [
    "--cfg",
    "hyper_unstable_ffi",
    "--cfg",
    "hyper_unstable_tracing",
]

[package.metadata.playground]
features = ["full"]

[package.metadata.capi.header]
generation = false
subdirectory = false

[[package.metadata.capi.install.include.asset]]
from = "capi/include/hyper.h"

[features]
capi = []
client = [
    "dep:want",
    "dep:pin-project-lite",
    "dep:smallvec",
]
default = []
ffi = [
    "dep:http-body-util",
    "dep:futures-util",
]
full = [
    "client",
    "http1",
    "http2",
    "server",
]
http1 = [
    "dep:atomic-waker",
    "dep:futures-channel",
    "dep:futures-core",
    "dep:httparse",
    "dep:itoa",
    "dep:pin-utils",
]
http2 = [
    "dep:futures-channel",
    "dep:futures-core",
    "dep:h2",
]
nightly = []
server = [
    "dep:httpdate",
    "dep:pin-project-lite",
    "dep:smallvec",
]
tracing = ["dep:tracing"]

[lib]
name = "hyper"
path = "src/lib.rs"

[dependencies.atomic-waker]
version = "1.1.2"
optional = true

[dependencies.bytes]
version = "1.2"

[dependencies.futures-channel]
version = "0.3"
optional = true

[dependencies.futures-core]
version = "0.3.31"
optional = true

[dependencies.futures-util]
version = "0.3"
features = ["alloc"]
optional = true
default-features = false

[dependencies.h2]
path = "../primp-h2"
default-features = false
optional = true

[dependencies.http]
version = "1"

[dependencies.http-body]
version = "1"

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies.httparse]
version = "1.9"
optional = true

[dependencies.httpdate]
version = "1.0"
optional = true

[dependencies.itoa]
version = "1"
optional = true

[dependencies.pin-project-lite]
version = "0.2.4"
optional = true

[dependencies.pin-utils]
version = "0.1"
optional = true

[dependencies.smallvec]
version = "1.12"
features = [
    "const_generics",
    "const_new",
]
optional = true

[dependencies.tokio]
version = "1"
features = ["sync"]

[dependencies.tracing]
version = "0.1"
features = ["std"]
optional = true
default-features = false

[dependencies.want]
version = "0.3"
optional = true

[dev-dependencies.form_urlencoded]
version = "1"

[dev-dependencies.futures-channel]
version = "0.3"
features = ["sink"]

[dev-dependencies.futures-util]
version = "0.3"
features = [
    "alloc",
    "sink",
]
default-features = false

[dev-dependencies.http-body-util]
version = "0.1"

[dev-dependencies.pin-project-lite]
version = "0.2.4"

[dev-dependencies.pretty_env_logger]
version = "0.5"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.spmc]
version = "0.3"

[dev-dependencies.tokio]
version = "1"
features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "test-util",
]

[dev-dependencies.tokio-test]
version = "0.4"

[dev-dependencies.tokio-util]
version = "0.7.10"

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [
    "cfg(hyper_unstable_tracing)",
    "cfg(hyper_unstable_ffi)",
]

[profile.bench]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
